--- a/404.html
+++ b/404.html
@@ -3,9 +3,13 @@ layout: landing
 title: Página no encontrada
 permalink: /404.html
 lang: es
-hero_img: "/assets/icons/404-light.svg"
+
+# Imagen principal para modo claro y oscuro
+hero_img_light: "/assets/icons/404-light.svg"
 hero_img_dark: "/assets/icons/404-dark.svg"
+
+# Contenido del hero
 hero_title: "¡Oops! <span class='text-verde-1'>Página no encontrada</span>"
 hero_subtitle: "Error 404"
-hero_description: "Parece que esta página no existe. Puedes regresar al <a href="{{ '/' | relative_url }}" class='text-verde-1 fw-bold'>inicio</a>."
+hero_description: "Parece que esta página no existe. Puedes regresar al <a href='{{ '/' | relative_url }}' class='text-verde-1 fw-bold'>inicio</a>."
 ---
