--- a/en-proceso.html
+++ b/en-proceso.html
@@ -3,7 +3,7 @@ layout: landing
 title: En construcción
 permalink: /en-proceso.html
 lang: es
-hero_img: "/assets/icons/under-construction-light.svg"
+hero_img_light: "/assets/icons/under-construction-light.svg"
 hero_img_dark: "/assets/icons/under-construction-dark.svg"
 hero_title: "Esta sección está <span class='text-verde-1'>en construcción</span>"
 hero_description: "Estoy trabajando para traerte algo genial muy pronto."
