--- a/en/mantenimiento.html
+++ b/en/mantenimiento.html
@@ -3,7 +3,7 @@ layout: landing
 title: Maintenance
 permalink: /en/maintenance.html
 lang: en
-hero_img: "/assets/icons/maintenance-light.svg"
+hero_img_light: "/assets/icons/maintenance-light.svg"
 hero_img_dark: "/assets/icons/maintenance-dark.svg"
 hero_title: "We are <span class='text-verde-1'>working on it</span>"
 hero_description: "The site is under maintenance. We'll be back shortly. Thanks for your patience 💚"
