--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -3,7 +3,7 @@ layout: landing
 title: Mantenimiento
 permalink: /mantenimiento.html
 lang: es
-hero_img: "/assets/icons/maintenance-light.svg"
+hero_img_light: "/assets/icons/maintenance-light.svg"
 hero_img_dark: "/assets/icons/maintenance-dark.svg"
 hero_title: "Estamos <span class='text-verde-1'>haciendo mejoras</span>"
 hero_description: "Volveremos pronto. Gracias por tu paciencia 💚"
