--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -3,8 +3,12 @@ layout: landing
 title: Mantenimiento
 permalink: /mantenimiento.html
 lang: es
+
+# Imagen principal para modo claro y oscuro
 hero_img_light: "/assets/icons/maintenance-light.svg"
 hero_img_dark: "/assets/icons/maintenance-dark.svg"
+
+# Contenido del hero
 hero_title: "Estamos <span class='text-verde-1'>haciendo mejoras</span>"
 hero_description: "Volveremos pronto. Gracias por tu paciencia 💚"
 no_content: true
