--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ permalink: /index.html
 hero_image_dark: "/assets/img/index-bg-dark.jpg"
 hero_image_light: "/assets/img/index-bg-light.jpg"
 hero_img: "/assets/img/perfil-Chispi.jpg"
-hero_title: "¡Hola! Soy <span class='text-verde-1'>Chispi</span>"
-hero_subtitle: "Desarrolladora | Analista de Datos | Creadora de contenido"
-hero_description: "Bienvenida a <strong>Chispi Page</strong>: un rincón creativo donde comparto mis ideas, proyectos, devlogs, arte y más."
+hero_title: "<span class='text-verde-1'>Cristina "Chispi" Fuentes</span>"
+hero_subtitle: "Consultora de Datos & Desarrollo | Remoto / Híbrido"
+hero_description: "Python · SQL · Power BI · Visualización · Automatización"
 ---
